# databricks-automation-bundles

./: .gitignore  .yamlfmt  ARCHITECTURE.md  README.md  justfile  prek.toml  pyproject.toml
.agent/skills/commit/: SKILL.md
.github/workflows/: deploy.yml  pr-validation.yml  prod-deployment.yml
apps/bundle-explorer/: README.md  canvas.js  index.html  model.js  style.css
docs/design-docs/: databricks-dab-monorepo-foundation-design.md
docs/implementation/: databricks-dab-monorepo-foundation-phase-1.md  databricks-dab-monorepo-foundation-shipped.md
libs/: README.md
projects/platform-governance/: README.md  project.yaml
schemas/: bundle.schema.json  project.schema.json
schemas/evidence/: README.md  abac-contract-tests.schema.json  bundle-validation.schema.json  changed-bundles.schema.json  promotion-decision.schema.json  repo-validation.schema.json
templates/: README.md
templates/bundle-basic/: README.md  bundle.yaml
templates/project/: README.md  project.yaml
tests/: test_abac_access_map_template.py  test_abac_contracts.py  test_abac_customer_bundle.py  test_abac_customer_contracts.py  test_abac_dogfood_bundle.py  test_abac_general_bundle.py  test_abac_general_contracts.py  test_abac_general_policy.py  test_abac_general_seed.py  test_abac_jira_seed.py  test_bundle_explorer.py  test_deploy_workflow.py  test_evidence_schemas.py  test_justfile.py  test_phase1b_docs_reconciliation.py  test_pr_validation_workflow.py  test_prod_deployment_workflow.py  test_repoctl_evidence.py  test_repoctl_foundation.py  test_repoctl_seed.py
(+80 files in other folders)
