[project]
name = "databricks-automation-bundles"
version = "0.1.0"
description = "Lightweight foundation tooling for a Databricks Asset Bundle monorepo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
repoctl = "repoctl.cli:main"

[dependency-groups]
dev = [
    "databricks-sdk==0.121.0",
    "prek>=0.2.0",
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tools/repoctl/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools/repoctl/src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
